objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Medical_Management_Service_Location__c</fullName>
        <label>Medical Management Service Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IHM- Albany NY</fullName>
                </value>
                <value>
                    <fullName>IHM- Atlanta GA</fullName>
                </value>
                <value>
                    <fullName>IHM- St Louis MO</fullName>
                </value>
                <value>
                    <fullName>Indianapolis, IN</fullName>
                </value>
                <value>
                    <fullName>MHA-  St Louis MO</fullName>
                </value>
                <value>
                    <fullName>CCMU- Albany NY</fullName>
                </value>
                <value>
                    <fullName>CCM-West</fullName>
                </value>
                <value>
                    <fullName>CCM-Georgia</fullName>
                </value>
                <value>
                    <fullName>CCM-Central</fullName>
                </value>
                <value>
                    <fullName>CCM-Virginia</fullName>
                </value>
                <value>
                    <fullName>CCM-New  York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Management__c</fullName>
        <label>Medical Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCM Model - Coordinated Care Model (Anthem Standard)</fullName>
                </value>
                <value>
                    <fullName>IHM Model -  Integrated Health Model (buy-up option)</fullName>
                </value>
                <value>
                    <fullName>MHA Model - Mercer Health Advantage (buy-up option)</fullName>
                </value>
                <value>
                    <fullName>Third Party Vendor</fullName>
                </value>
                <value>
                    <fullName>TBD (used until model is known, if undecided)</fullName>
                </value>
                <value>
                    <fullName>CCMU Model (buy-up option)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <inlineHelpText>Enter the number of Members for this particular Line of Business (not the total Opportunity)</inlineHelpText>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NASCOContractingSitusState__c</fullName>
        <description>Fetches the NASCO Contracting Situs Status of the Account associated with the Group.</description>
        <formula>TEXT(Account__r.NASCO_Contracting_Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NASCO Contracting Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofOpenProductsProgramsGROUP__c</fullName>
        <description>Roll-up helper field to count the number open Products Lines (Programs and Products) on the Group.</description>
        <label>Number of Open Products &amp; Programs GROUP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Op_Owner_Adjustments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Op Owner Adjustments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_OE_Adjustments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational OE Adjustments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Owner_Adjustments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational Owner Adjustments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Owner_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational Owner Claims</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Owner_Serv_Mgrs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational Owner Serv Mgrs</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Owner_Service_Managers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational Owner Service Manager(s)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Expert_OE_Adjustments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Expert (OE) Adjustments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Expert_OE_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Expert (OE) Claims</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Expert_OE_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Expert (OE) Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Owner_Adjustments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Owner Adjustments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Expert_OE_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ops Expert (OE) Claims</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Expert_OE_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ops Expert (OE) Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator__c</fullName>
        <label>Performance Indicator</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Medical_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Medical Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLineFundingType__c</fullName>
        <description>Funding type of the Medical Product Line for GS Number Assignment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Line Funding Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Enrollment_Maintenance_Electronic__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Number of days that retroactive maintenance can be performed (Group Tape – Enrollment via 834).</inlineHelpText>
        <label>Retro Enrollment/Maintenance –Electronic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                    <label>60 days</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>90 days</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120 days</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 days</label>
                </value>
                <value>
                    <fullName>365</fullName>
                    <label>365 days</label>
                </value>
                <value>
                    <fullName>1095</fullName>
                    <label>1095 days</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retro_Enrollment_Maintenance_Online__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Number of days that retroactive maintenance can be performed (Online – manually in ISG).</inlineHelpText>
        <label>Retro Enrollment/Maintenance – Online</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                    <label>60 days</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>90 days</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120 days</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 days</label>
                </value>
                <value>
                    <fullName>365</fullName>
                    <label>365 days</label>
                </value>
                <value>
                    <fullName>1095</fullName>
                    <label>1095 days</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID2__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Situs State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribers__c</fullName>
        <inlineHelpText>Enter the number of Subscribers for this particular Line of Business (not the total Opportunity)</inlineHelpText>
        <label>Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_OppOwnerEmail__c</fullName>
        <description>Sales - REL1 - This field is an email field. It gets the email address of the Opportunity owner  i.e tagged to the Quote from which Group Number is requested. This field is used in the email alert as a recipient.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TECH_OppOwnerEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_OpportunityId__c</fullName>
        <description>Sales - REL1 - This field is an Id field. It gets the record id of the Opportunity tagged to the Quote from which Group Number is requested. This field is re-used in the OpportunityLink(Formula field).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TECH_OpportunityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_OpportunityLink__c</fullName>
        <description>Sales - REL1 - This field is a formula field. It forms the URL of the Opportunity record i.e tagged to the Quote from which Group Number is requested. This field is re-used in an Email Template which will be sent this Opportunity Owner.</description>
        <formula>LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390)) &amp;  TECH_OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_OpportunityLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalEligibles__c</fullName>
        <label>Total Eligibles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGSContractingSitusState__c</fullName>
        <description>Fetches the WGs Contracting situs Status from the Account associated with the Group</description>
        <formula>TEXT(Account__r.WGS_Contracting_Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WGS Contracting Situs State</label>
        <type>Text</type>
    </fields>
    <label>Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <label>Group</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Group_VR01_Do_Not_Create_Elig_COB_FUND</fullName>
        <active>true</active>
        <description>Users are not allowed to create more than one Eligibility, COB and Funding(WGS) record</description>
        <errorConditionFormula>AND(!$User.BypassValidation__c, (OR( COB_Count__c &gt; 1, Eligibility_Count__c &gt; 1,  Funding_Count__c &gt; 1)))</errorConditionFormula>
        <errorMessage>Please Do Not Create More Than One Eligibility, COB And Funding (WGS) Records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_VR02_Employer_Service_Rep_Req_Elig</fullName>
        <active>true</active>
        <description>Field can be saved if Total Eligibles is equal or greater than 1000.</description>
        <errorConditionFormula>AND(OR(Anthem_Entity__c ==&apos;Local/Large Group&apos;,Anthem_Entity__c==&apos;Labor and Trust&apos;),
	AND( 
	ISPICKVAL(Employer_Service_Rep_Requirement__c,&apos;Yes&apos;), 
	OR( 
	TotalEligibles__c &lt; 1000, 
	OR( 
	ISNULL(TotalEligibles__c), 
	ISBLANK(TotalEligibles__c) 
	) 
	) 
	)
)</errorConditionFormula>
        <errorDisplayField>Employer_Service_Rep_Requirement__c</errorDisplayField>
        <errorMessage>Please validate that the Group has greater or equal to 1000 eligible lives.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_VR03_Exception_Details_YesWithExce</fullName>
        <active>true</active>
        <description>This field will be required if  &quot;Employer Service Rep Requirement&quot; is &apos;Yes with Exception&apos;.</description>
        <errorConditionFormula>AND(OR(Anthem_Entity__c ==&apos;Local/Large Group&apos;,Anthem_Entity__c==&apos;Labor and Trust&apos;),
	AND(ISPICKVAL(Employer_Service_Rep_Requirement__c,&apos;Yes with Exception&apos;),ISBLANK(Exception_Details__c))
)</errorConditionFormula>
        <errorDisplayField>Exception_Details__c</errorDisplayField>
        <errorMessage>Exception Details cannot be left blank, if Employer Service Rep Requirement is &apos;Yes with Exception&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_VR04_Exception_Details_WithoutVal</fullName>
        <active>true</active>
        <description>This field can only be saved if &quot;Employer Service Rep Requirement&quot; is set as &apos;Yes with Exception&apos;.</description>
        <errorConditionFormula>AND(OR(Anthem_Entity__c ==&apos;Local/Large Group&apos;,Anthem_Entity__c==&apos;Labor and Trust&apos;),
	AND(NOT(ISPICKVAL(Employer_Service_Rep_Requirement__c,&apos;Yes with Exception&apos;)),NOT(ISBLANK(Exception_Details__c)))
)</errorConditionFormula>
        <errorDisplayField>Exception_Details__c</errorDisplayField>
        <errorMessage>This field can only be saved if &quot;Employer Service Rep Requirement&quot; is set as &apos;Yes with Exception&apos;.</errorMessage>
    </validationRules>
</CustomObject>